--- a/application/afterSale/view/UpdateAftersale/form.html
+++ b/application/afterSale/view/UpdateAftersale/form.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../../../public/static/layui/css/layui.css">
-    <script src="../../../public/static/js/jquery-3.3.1.js"></script>
-    <script src="../../../public/static/layui/layui.js"></script>
+    <link rel="stylesheet" href="../../static/layui/css/layui.css">
+    <script src="../../static/js/jquery-3.3.1.js"></script>
+    <script src="../../static/layui/layui.js"></script>
 
     <script>
         //Demo
@@ -32,17 +32,13 @@
 </head>
 
 <body>
-
-
-
-
     <!-- action="../../customOrder/Update_order/update.html" -->
     <form class="layui-form" id="test" action="../../afterSale/UpdateAftersale/update.html">
 
         <div class="layui-form-item">
             <label class="layui-form-label">售后订单编号</label>
             <div class="layui-input-block">
-                <input type="text" name="aftersale_roll" disabled lay-verify="required" value="{$info.aftersale_roll}"
+                <input type="hidden" name="aftersale_roll"  lay-verify="required" value="{$aftersaleInfo.aftersale_roll}"
                     autocomplete="off" class="layui-input">
             </div>
         </div>
@@ -50,7 +46,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">订单编号</label>
             <div class="layui-input-block">
-                <input type="text" name="order_num" disabled lay-verify="required" value="{$info.order_num}" class="layui-input">
+                <input type="text" name="order_num" readonly lay-verify="required" value="{$aftersaleInfo.order_num}" class="layui-input">
             </div>
         </div>
 
@@ -58,8 +54,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">问题类型</label>
             <div class="layui-input-block">
-                <select name="question_type" lay-verify="required">
-                    <option value="{$info.question_type}">{$info.question_type}</option>
+                <select name="question_type" lay-verify="required" value="{$aftersaleInfo.question_type}">
                     <option value="退货">退货</option>
                     <option value="换货">换货</option>
                     <option value="维修">维修</option>
@@ -71,21 +66,21 @@
         <div class="layui-form-item">
             <label class="layui-form-label">受理日期</label>
             <div class="layui-input-block">
-                <input type="text" name="date" disabled value="{$info.processing_date}" class="layui-input">
+                <input type="text" name="date" readonly value="{$aftersaleInfo.processing_date}" class="layui-input">
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">问题内容</label>
             <div class="layui-input-block">
-                <textarea name="question" value="{$info.question}" class="layui-input"></textarea>
+                <textarea name="question" value="{$aftersaleInfo.question}" class="layui-input"></textarea>
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">受理人员</label>
             <div class="layui-input-block">
-                <input type="text" value="{$info.employee_id}" class="layui-input">
+                <input type="text" name='employee_id' value="{$aftersaleInfo.employee_id}" readonly class="layui-input">
             </div>
         </div>
 
