--- a/application/feedback/view/Feedback/pannel.html
+++ b/application/feedback/view/Feedback/pannel.html
@@ -36,56 +36,71 @@
 
 <body>
 
+    <form class="layui-form" id="test" action="../../feedback/Feedback/insert.html">
 
-    <form class="layui-form" id="test" action="../../afterSale/AfterSale/insert.html">
+        <div class="layui-form-item">
+            <label class="layui-form-label">售后反聩单号</label>
+            <div class="layui-input-block">
+                <p>{$feedbackroll}</p>
+                <input type="hidden" name="feedback_roll" value="{$feedbackroll}" autocomplete="off" class="layui-input">
+            </div>
+        </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">售后单号</label>
             <div class="layui-input-block">
-                <p>{$aftersaleroll}</p>
-                <input type="hidden" name="aftersale_roll" value="{$aftersaleroll}"
-                    autocomplete="off" class="layui-input">
-            </div>
-        </div>
-
-        <div class="layui-form-item">
-            <label class="layui-form-label">订单编号</label>
-            <div class="layui-input-block">
-                <p>{$saleID}</p>
-                <input type="hidden" name="order_num"value="{$saleID}" class="layui-input"/>
+                <p>{$aftersaleID}</p>
+                <input type="hidden" name="order_num" value="{$aftersaleID}" class="layui-input" />
             </div>
         </div>
 
 
         <div class="layui-form-item">
-            <label class="layui-form-label">问题类型</label>
+            <label class="layui-form-label">处理类型</label>
             <div class="layui-input-block">
                 <p>{$type}</p>
-                <input type="hidden" name="question_type" value="{$type}" class="layui-input"/>
+                <input type="hidden" name="feedback_type" value="{$type}" class="layui-input" />
             </div>
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label">问题内容</label>
+            <label class="layui-form-label">处理情况说明</label>
             <div class="layui-input-block">
-                <p>{$content}</p>
-                <textarea name="question" type="hidden" value="{$content}" class="layui-input"></textarea>
+                <p>{$others}</p>
+                <textarea name="others" type="hidden" value="{$others}" class="layui-input"></textarea>
             </div>
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label">受理日期</label>
+            <label class="layui-form-label">反馈日期</label>
             <div class="layui-input-block">
                 <p>{$date}</p>
-                <input type="hidden" name="date" value="{$date}" class="layui-input"/>
+                <input type="hidden" name="feedback_date" value="{$date}" class="layui-input" />
             </div>
         </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">费用</label>
+            <div class="layui-input-block">
+                <p>{$charge}</p>
+                <input type="hidden" name="charge" value="{$charge}" class="layui-input" />
+            </div>
+        </div>
+
 
         <div class="layui-form-item">
             <label class="layui-form-label">受理人员</label>
             <div class="layui-input-block">
                 <p>{$saleperson}</p>
                 <input type="hidden" value="{$saleperson}" name='saleperson' class="layui-input">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">用户确认</label>
+            <div class="layui-input-block">
+                <p>{$confirm}</p>
+                <input type="hidden" value="{$confirm}" name='confirment' class="layui-input">
             </div>
         </div>
 
