--- a/application/feedback/view/Feedback/show.html
+++ b/application/feedback/view/Feedback/show.html
@@ -52,7 +52,7 @@
     <div style="padding: 100px 100px 10px;">
 
         <div class="form-group">
-            <label for="name">销售单号</label>
+            <label for="name">售后单号</label>
             <input type="text" class="form-control" placeholder="请输入销售单号" name="aftersaleID" id="aftersaleID">
         </div>
 
