--- a/application/product/view/product/product.html
+++ b/application/product/view/product/product.html
@@ -10,6 +10,7 @@
         <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
         <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
          <link rel="stylesheet" href="theme.css" type="text/css"> 
+         <link rel="stylesheet" href="__CSS__/department.css" type="text/css">   
 </head>
 <body>
     <div class="container" style=" height:452px;">
@@ -26,12 +27,13 @@
                         <tbody>
                         {volist name="pro" id="pro"}
                             <tr>
-                            <td><a href="http://localhost/tp6/public/Product/productdetails/productdetails.html?productdevelop_id={$pro.productdevelop_id}">{$pro.productdevelop_name}</a></td>
+                            <td><a style="color:black;" href="../../Product/productdetails/productdetails.html?productdevelop_id={$pro.productdevelop_id}">{$pro.productdevelop_name}</a></td>
                             <td>{$pro.productmaster_name}</td>
                                 </tr>
                         {/volist} 
                         </tbody>
                     </table>
+                    <button><a href="../../Department/department/department.html?department_id={$pro.department_id}">BACK</a></button>
             </div>
         </div>
     </div>
