--- a/application/product/view/productdetails/productdetails.html
+++ b/application/product/view/productdetails/productdetails.html
@@ -10,6 +10,7 @@
         <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
         <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
          <link rel="stylesheet" href="theme.css" type="text/css"> 
+         <link rel="stylesheet" href="__CSS__/department.css" type="text/css">  
 </head>
 <body>
     <div class="container" style=" height:452px;">
@@ -38,6 +39,7 @@
                         {/volist} 
                         </tbody>
                     </table>
+                    <button><a href="../../Product/product/product.html?department_id={$pro.productdevelop_id}">BACK</a></button>
             </div>
         </div>
     </div>
