--- a/application/department/view/department/department.html
+++ b/application/department/view/department/department.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        @font-face
-                {
-                    font-family: myfont;
-                    src:url('__ROOT__/static/font/GunfighterAcademy-Regular.ttf');
-                }
-    
-    </style>
 <head> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +9,8 @@
         <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
         <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-         <link rel="stylesheet" href="theme.css" type="text/css"> 
+        <link rel="stylesheet" href="theme.css" type="text/css">
+        <link rel="stylesheet" href="__CSS__/department.css" type="text/css">   
 </head>
 <body>
     <div  class="container" style=" height:452px;">
@@ -33,13 +26,13 @@
                 <tr>
                     <td>部门名称</td>
                     <td>{$dep.department_name}</td>
-                    <td><a href="http://localhost/tp6/public/Product/product/product.html?department_id={$dep.department_id}">-></a></td>
                 </tr>
                 <tr>
                     <td>部门描述</td>
                     <td>{$dep.department_desc}</td>
                 </tr>
-            </table>
+            </table>    
+                <button><a href="../../Product/product/product.html?department_id={$dep.department_id}">CHECK PRODUCTS</a></button>
             </div>
         </div>
     </div>  
