--- a/application/feedback/view/Feedback/pannel.html
+++ b/application/feedback/view/Feedback/pannel.html
@@ -50,7 +50,7 @@
             <label class="layui-form-label">售后单号</label>
             <div class="layui-input-block">
                 <p>{$aftersaleID}</p>
-                <input type="hidden" name="order_num" value="{$aftersaleID}" class="layui-input" />
+                <input type="hidden" name="aftersale_roll" value="{$aftersaleID}" class="layui-input" />
             </div>
         </div>
 
