--- a/application/department/view/department/department.html
+++ b/application/department/view/department/department.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="__CSS__/department.css" type="text/css">   
 </head>
 <body>
-    <div  class="container" style=" height:452px;">
+    <div  class="container" >
         <div class="row">
             <div class="offset-md-1 col-md-10"></div>
             <br>
