--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -42,9 +42,9 @@ margin:8px;
 }
 </style>
     <!-- <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script> -->
-    <script src="../../public/static/js/jquery-3.3.1.js"></script>
-    <script src="../../public/static/layui/layui.js"></script>
-    <link rel="stylesheet" href="../../public/static/layui/css/layui.css">
+    <script src="__ROOT__/static/js/jquery-3.3.1.js"></script>
+    <script src="__ROOT__/static/layui/layui.js"></script>
+    <link rel="stylesheet" href="__ROOT__/static/layui/css/layui.css">
     <script>
         $(document).ready(function () {
             $('.submit').on('click', function () {
@@ -88,7 +88,7 @@ margin:8px;
 
     </script>
     <script type="text/html" id="barDemo">
-            <a class="layui-btn layui-btn-xs" lay-event="detail">查看</a>
+            <!-- <a class="layui-btn layui-btn-xs" lay-event="detail">查看</a> -->
             <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
             <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
             
@@ -101,7 +101,7 @@ margin:8px;
             table.render({
                 elem: '#test'
                 , title: "订单表"
-                , height: 900
+                , height: 600
                 , defaultToolbar: ['filter', 'print', 'exports']
                 , url: '../../public/customOrder/index/json' //数据接口
                 , page: true //开启分页
@@ -122,7 +122,7 @@ margin:8px;
                                         }                    , { field: 'saler_num', title: '销售员编号', width: 110, sort: true }
                     , { field: 'order_time', title: '创建时间', width: 150, sort: true }
                     , { field: 'order_channel', title: '渠道', width: 110, sort: true }
-                    , { fixed: 'right', width: 170, toolbar: '#barDemo' } //这里的toolbar值是模板元素的选择器
+                    , { fixed: 'right', width: 120, toolbar: '#barDemo' } //这里的toolbar值是模板元素的选择器
 
                 ]]
 
@@ -157,7 +157,7 @@ margin:8px;
                     title: '修改订单',
                     maxmin: true,
                     shadeClose: true, //点击遮罩关闭层
-                    area: ['800px', '650px'],
+                    area: ['900px', '400px'],
                     //   content: ['../../public/customOrder/Update_order/form?id='+id,'no']
                     content: '../../public/customOrder/Update_order/form?id=' + id
                 });
