--- a/application/afterSale/view/AfterSale/show.html
+++ b/application/afterSale/view/AfterSale/show.html
@@ -25,8 +25,6 @@
 
             var saleperson = document.getElementById('saleperson').value;
 
-
-
             layer.open({
                 type: 2,
                 title: '修改订单',
@@ -34,9 +32,9 @@
                 shadeClose: true, //点击遮罩关闭层
                 area: ['800px', '600px'],
                 content: "../../afterSale/AfterSale/creatForm?type=" + valuetype + "&content=" + content
-                    + "&saleID=" + saleID + "&saleperson=" + saleperson
+                    + "&saleID=" + saleID 
             });
-
+            
 
         }
 
@@ -49,7 +47,7 @@
     <div style="padding: 100px 100px 10px;">
         <div class="form-group">
             <label for="name">订单编号</label>
-            <input type="text" class="form-control" placeholder="请输入销售单号" name="saleID" id="saleID">
+            <input type="text" class="form-control" placeholder="ODYYYYMMXXXXX" name="saleID" id="saleID">
         </div>
 
         <label for="name">问题分类</label>
@@ -59,13 +57,6 @@
             <option>维修</option>
             <option>咨询</option>
         </select>
-
-        <div class="form-group">
-            <label for="name">售后人员</label>
-            <input type="text" class="form-control" placeholder="请输入销售人选编号" name="saleperson" id="saleperson">
-        </div>
-
-
 
         <div class="form-group">
             <label for="name">问题详情</label>
