--- a/application/afterSale/view/Index/index_emp.html
+++ b/application/afterSale/view/Index/index_emp.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>订单管理</title>
+<!-- <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script> -->
 <script src="../../static/js/jquery-3.3.1.js"></script>
 <script src="../../static/layer/layer.js"></script>
 <script>  
@@ -14,25 +15,16 @@
           title: '修改订单',
           maxmin: true,
           shadeClose: true, //点击遮罩关闭层
-          area : ['1000px' , '420px'],
+          area : ['700px' , '420px'],
           content: '../../afterSale/UpdateAftersale/form?id='+id
             });
         });
-        return false;
        });
     </script>
-    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="theme.css" type="text/css">
-    <link rel="stylesheet" href="__CSS__/aftersale.css" type="text/css">   
 </head>
 
 <body>
-    <br>
-    <br>
-    <br>
+<h2>售后订单列表</h2> 
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -40,7 +32,6 @@
             <th id="aftersale_id">售后编号</th>
             <th id="order_num">订单编号</th>
             <th id="question_type">问题类型</th>
-            <th id="employee_id">售后人员</th>
             <th id="processing_date">受理日期</th>
             <th id="state">受理状态</th>
             <th id="question">问题详情</th>
@@ -53,7 +44,6 @@
         <td>{$Info.aftersale_roll}</td>
         <td>{$Info.order_num}</td>
         <td>{$Info.question_type}</td>
-        <td>{$Info.employee_id}</td>
         <td>{$Info.processing_date}</td>
         <td>{$Info.state}</td>
         <td>{$Info.question}</td>
