--- a/application/role/view/role/roleChange.html
+++ b/application/role/view/role/roleChange.html
@@ -17,7 +17,18 @@
         <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
         <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-         <link rel="stylesheet" href="theme.css" type="text/css"> 
+        <link rel="stylesheet" href="theme.css" type="text/css"> 
+        <script>
+            $(function(){
+                $("input[name='role_id']").each(function(){
+                    var selected = {$selected};  /* 还可以用{$list[0]['role_id']} */
+                    var obj = $(this).attr("value");
+                    if(obj == selected){
+                        $(this).prop("checked","checked");
+                    }
+                });
+            });
+        </script>
 </head>
 <body style="background-color: powderblue;">
     <div class="container" style=" height:452px;">
@@ -51,7 +62,8 @@
                             <td><input type="radio" name="role_id" value="4">售后人员</td>
                         </tr>
                         <tr>
-                            <td colspan="4" style="padding-left:150px;"><button id="btn" type="submit" class="btn btn-primary">Submit</button></td>
+                            <td colspan="2" style="padding-left:100px;"><button id="btn" type="submit" class="btn btn-primary">Submit</button></td>
+                            <td colspan="2"><button id="btn" type="button" class="btn btn-primary" onclick="javascript:history.back(-1);">Cancel</button></td>
                         </tr>
                     </tbody>
                     {/volist}
