--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -115,12 +115,12 @@ margin:8px;
                     , { field: 'product_name', title: '产品名称', width: 142, sort: true }
                     , { field: 'amount', title: '数量', width: 80, sort: true }
                     , { field: 'unit_price', title: '单价', width: 80, sort: true }
-                    , {field:'title', title: '总价', width: 100
+                    , {field:'title', title: '总价',  sort: true, width: 100
                                         ,templet: function(d){
-                                            return  d.amount * d.unit_price+'￥';
+                                            return  d.amount * d.unit_price;
                                             }
                                         }                    , { field: 'saler_num', title: '销售员编号', width: 110, sort: true }
-                    , { field: 'order_time', title: '创建时间', width: 150, sort: true }
+                    , { field: 'order_time', title: '创建时间', width: 150 }
                     , { field: 'order_channel', title: '渠道', width: 110, sort: true }
                     , { fixed: 'right', width: 120, toolbar: '#barDemo' } //这里的toolbar值是模板元素的选择器
 
@@ -178,7 +178,13 @@ margin:8px;
 <body>
 
 
-
+        <div>
+                <form id="excel" method="post" action="{:url('customOrder/import_from_excel/import')}" class="form-signin" enctype="multipart/form-data" >
+                <input id="file" name="excel" type="file" class="form-control">
+                <button class="btn btn-lg btn-primary btn-block"id="btton" >选择文件导入</button>
+                </form>
+                <a href="../../顾客订单导入模板.xlsx"><button value="下载导入模板">下载</button></a>
+                </div>
     <table id="test" lay-filter="jsontable" lay-size="lg"></table>
 
 
