--- a/application/customOrder/view/index/index.html
+++ b/application/customOrder/view/index/index.html
@@ -95,13 +95,15 @@ margin:8px;
      </script>
     <script type="text/html" id="pdfexcel">
         <div>
-                <!-- action="{:url('customOrder/import_from_excel/import')}" -->
 
             <form id="excel" method="post"  action="{:url('customOrder/import_from_excel/import')}"   class="form-signin" enctype="multipart/form-data" >
+            <input id="file" name="excel" class="layui-btn layui-btn-xs" type="file" >
+            <button class="layui-btn layui-btn-xs" id="btton"  lay-event="import">导入Excel</button>
             <a href="../../顾客订单导入模板.xlsx"><button class="layui-btn layui-btn-xs" value="下载模板">下载导入模板</button></a>
-            <input id="file" name="excel" class="layui-btn layui-btn-xs" type="file" class="form-control">
-            <button class="layui-btn layui-btn-xs" id="btton" >导入</button>
+            <a href='../../public/customOrder/index/excelPrint'><button  id="excel" class="layui-btn layui-btn-xs">导出Excel</button></a>
             </form>
+            <button id="customer" class="layui-btn layui-btn-xs" lay-event="new">新建客户</button>
+
         </div>
 
  </script>
@@ -114,6 +116,7 @@ margin:8px;
                 elem: '#test'
                 , title: "订单表"
                 , height: 600
+                , width: 1300
                 , defaultToolbar: ['filter', 'print', 'exports']
                 , url: '../../public/customOrder/index/json' //数据接口
                 , page: true //开启分页
@@ -127,12 +130,12 @@ margin:8px;
                     , { field: 'amount', title: '数量', width: 80, sort: true }
                     , { field: 'unit_price', title: '单价', width: 80, sort: true }
                     , {
-                        field: 'title', title: '总价', width: 100 , sort: true
+                        field: 'title', title: '总价', width: 100, sort: true
                         , templet: function (d) {
                             return d.amount * d.unit_price + '￥';
                         }
                     }, { field: 'saler_num', title: '销售员编号', width: 110, sort: true }
-                    , { field: 'order_time', title: '创建时间', width: 150, sort: true  }
+                    , { field: 'order_time', title: '创建时间', width: 150, sort: true }
                     , { field: 'order_channel', title: '渠道', width: 110 }
                     , { fixed: 'right', width: 120, toolbar: '#barDemo' } //这里的toolbar值是模板元素的选择器
 
@@ -145,7 +148,31 @@ margin:8px;
             // table.resize('test');
 
 
+
             //监听工具条
+            // table.on('tool(jsontable)', function (obj) { //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
+            //     var data1 = obj.data; //获得当前行数据
+            //     var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+            //     var tr = obj.tr; //获得当前行 tr 的DOM对象
+            //     if (layEvent === 'new') { //查看
+            //         //do somehing
+            //         layer.msg("4564");
+            //         // console.log(data1['order_num']); //获取选中行的数据
+
+            //     }
+            // });
+            $('#customer').on('click', function () {
+                layer.open({
+                    type: 2,
+                    title: '创建新客户',
+                    maxmin: true,
+                    shadeClose: true, //点击遮罩关闭层
+                    area: ['480px', '500px'],
+                    //禁用滚动条
+                    content: ['../../public/customer/index/index', 'no']
+                    //   content: '../../public/customOrder/Update_order/form?id='+id
+                });
+            });
             table.on('tool(jsontable)', function (obj) { //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
                 var data1 = obj.data; //获得当前行数据
                 var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
@@ -157,7 +184,7 @@ margin:8px;
                     // console.log(data1['order_num']); //获取选中行的数据
 
                 } else if (layEvent === 'del') { //删除
-                    layer.confirm('真的删除行么', function (index) {
+                    layer.confirm('确定删除？', { icon: 3, title: '提示' }, function (index) {
                         obj.del(); //删除对应行（tr）的DOM结构，并更新缓存
                         layer.close(index);
                         //向服务端发送删除指令
@@ -175,11 +202,11 @@ margin:8px;
                     });
 
                     //同步更新缓存对应的值
-                    obj.update({
-                        username: '123'
-                        , title: 'xxx'
+                    // obj.update({
+                    //     username: '123'
+                    //     , title: 'xxx'
 
-                    });
+                    // });
                 }
             });
         });
