--- a/application/afterSale/view/UpdateAftersale/form.html
+++ b/application/afterSale/view/UpdateAftersale/form.html
@@ -73,7 +73,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">问题内容</label>
             <div class="layui-input-block">
-                <textarea name="question" value="{$aftersaleInfo.question}" class="layui-input"></textarea>
+                <textarea name="question" value="{$aftersaleInfo.question}" class="layui-input">{$aftersaleInfo.question}</textarea>
             </div>
         </div>
 
