--- a/application/feedback/view/Feedback/pannel.html
+++ b/application/feedback/view/Feedback/pannel.html
@@ -41,7 +41,14 @@
         <div class="layui-form-item">
             <label class="layui-form-label">售后反聩单号</label>
             <div class="layui-input-block">
-                <p>{$feedbackroll}</p>
+                    <?php
+                    if(isset($flag)){
+                        echo "<p>".$flag."</p>";
+                    }
+                    else{
+                        echo "<p>".$feedbackroll."</p>";
+                    }
+                    ?>
                 <input type="hidden" name="feedback_roll" value="{$feedbackroll}" autocomplete="off" class="layui-input">
             </div>
         </div>
@@ -49,7 +56,14 @@
         <div class="layui-form-item">
             <label class="layui-form-label">售后单号</label>
             <div class="layui-input-block">
-                <p>{$aftersaleID}</p>
+                    <?php
+                    if(isset($flag)){
+                        echo "<p>".$flag."</p>";
+                    }
+                    else{
+                        echo "<p>".$aftersaleID."</p>";
+                    }
+                    ?>
                 <input type="hidden" name="aftersale_roll" value="{$aftersaleID}" class="layui-input" />
             </div>
         </div>
@@ -58,16 +72,34 @@
         <div class="layui-form-item">
             <label class="layui-form-label">处理类型</label>
             <div class="layui-input-block">
-                <p>{$type}</p>
-                <input type="hidden" name="feedback_type" value="{$type}" class="layui-input" />
+                <?php
+                if(isset($type)){
+                    echo "<p>".$type."</p>".
+                    "<input type='hidden' name='feedback_type' value=".$type." class='layui-input' />";
+                }else{
+                    echo "<select name='feedback_type' lay-verify='required'>".
+                            "<option value='退货'>退货</option>".
+                            "<option value='换货'>换货</option>".
+                            "<option value='维修'>维修</option>".
+                            "<option value='咨询'>咨询</option>".
+                        "</select>";
+                }
+                ?>
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">处理情况说明</label>
             <div class="layui-input-block">
-                <p>{$others}</p>
-                <textarea name="others" type="hidden" value="{$others}" class="layui-input"></textarea>
+                <?php
+                if(isset($others)){
+                    echo "<p>".$others."</p>".
+                    "<input type='hidden' name='others' value=".$others." class='layui-input'>";
+                }
+                else{
+                    echo "<textarea name='others' class='layui-input'></textarea>";
+                }
+                ?>
             </div>
         </div>
 
@@ -82,8 +114,14 @@
         <div class="layui-form-item">
             <label class="layui-form-label">费用</label>
             <div class="layui-input-block">
-                <p>{$charge}</p>
-                <input type="hidden" name="charge" value="{$charge}" class="layui-input" />
+                <?php
+                if(isset($charge)){
+                    echo "<p>".$charge."</p>".
+                    "<input type='hidden' name='charge' value=".$charge." class='layui-input'/>";
+                }else{
+                    echo "<input type='number' name='charge' class='layui-input'/>";
+                }
+                ?>
             </div>
         </div>
 
@@ -91,22 +129,37 @@
         <div class="layui-form-item">
             <label class="layui-form-label">受理人员</label>
             <div class="layui-input-block">
-                <p>{$saleperson}</p>
-                <input type="hidden" value="{$saleperson}" name='saleperson' class="layui-input">
+                <?php echo "<p>".$_COOKIE['employee_id']."</p>";?>
+                <?php echo "<input type='hidden' value=".$_COOKIE['employee_id']." name='saleperson' class='layui-input'>"; ?> 
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">用户确认</label>
             <div class="layui-input-block">
-                <p>{$confirm}</p>
-                <input type="hidden" value="{$confirm}" name='confirment' class="layui-input">
+                <?php
+                if(isset($confirm)){
+                    echo  "<p>".$confirm."</p>".
+                    "<input type='hidden' value=".$confirm." name='confirment' class='layui-input'>";
+                }else{
+                    echo "<label> 确认</label><input type='radio' name='confirment' id='confirm1' value='1' checked>".
+                    "<label>未确认</label><input type='radio' name='confirment' id='confirm0' value='0'> ";
+                }
+                ?>
+                
             </div>
         </div>
 
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn" id='confirm' lay-submit lay-filter="formDemo">立即提交</button>
+                <?php
+                if(isset($flag)){
+                    echo "<button class='layui-btn' id='confirm' disabled lay-submit lay-filter='formDemo'>立即提交</button>";
+                }
+                else{
+                    echo "<button class='layui-btn' id='confirm' lay-submit lay-filter='formDemo'>立即提交</button>";
+                }
+                ?>
             </div>
         </div>
 
