--- a/application/afterSale/view/AfterSale/pannel.html
+++ b/application/afterSale/view/AfterSale/pannel.html
@@ -62,7 +62,7 @@
                         echo "<p>".$flag."</p>";
                     }
                     else{
-                        echo "<p>."$saleID."</p>";
+                        echo "<p>".$saleID."</p>";
                     }
                     
                     ?>
