--- a/application/afterSale/view/Index/index.html
+++ b/application/afterSale/view/Index/index.html
@@ -44,6 +44,7 @@
             <th id="processing_date">受理日期</th>
             <th id="state">受理状态</th>
             <th id="question">问题详情</th>
+            <th id="alter">修改</th>
         </tr>
     </thead>
 
@@ -56,6 +57,7 @@
         <td>{$Info.processing_date}</td>
         <td>{$Info.state}</td>
         <td>{$Info.question}</td>
+        <td><button class="submit" id={$Info.aftersale_roll}">修改</button></td>
     </tr>
     {/volist}
 </table>
