--- a/application/afterSale/view/Index/index.html
+++ b/application/afterSale/view/Index/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>订单管理</title>
-<script src="../../static/js/jquery-3.3.1.js"></script>
-<script src="../../static/layer/layer.js"></script>
+<script src="__ROOT__/static/js/jquery-3.3.1.js"></script>
+<script src="__ROOT__/static/layer/layer.js"></script>
 <script>  
        $(document).ready(function(){
         $('.submit').on('click', function(){
@@ -15,7 +15,7 @@
           maxmin: true,
           shadeClose: true, //点击遮罩关闭层
           area : ['1000px' , '420px'],
-          content: '../../afterSale/UpdateAftersale/form?id='+id
+          content: 'http://localhost/tp6/public/afterSale/UpdateAftersale/form?id='+id
             });
         });
         $('.submitfeedback').on('click', function(){
@@ -26,7 +26,7 @@
           maxmin: true,
           shadeClose: true, //点击遮罩关闭层
           area : ['1000px' , '420px'],
-          content: '../../feedback/Feedback/insertfromSV?id='+id
+          content: 'http://localhost/tp6/public/feedback/Feedback/insertfromSV?id='+id
             });
         });
         return false;
