--- a/application/feedback/view/Feedback/pannel.html
+++ b/application/feedback/view/Feedback/pannel.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../../static/layui/css/layui.css">
-    <script src="../../static/js/jquery-3.3.1.js"></script>
-    <script src="../../static/layui/layui.js"></script>
+    <link rel="stylesheet" href="__ROOT__/static/layui/css/layui.css">
+    <script src="__ROOT__/static/js/jquery-3.3.1.js"></script>
+    <script src="__ROOT__/static/layui/layui.js"></script>
 
     <script>
         //Demo
@@ -36,7 +36,7 @@
 
 <body>
 
-    <form class="layui-form" id="test" action="../../feedback/Feedback/insert.html">
+    <form class="layui-form" id="test" action="http://localhost/tp6/public/feedback/Feedback/insert.html">
 
         <div class="layui-form-item">
             <label class="layui-form-label">售后反聩单号</label>
