--- a/application/afterSale/view/Index/index_emp.html
+++ b/application/afterSale/view/Index/index_emp.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>订单管理</title>
 <!-- <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script> -->
-<script src="../../static/js/jquery-3.3.1.js"></script>
-<script src="../../static/layer/layer.js"></script>
+<script src="__ROOT__/static/js/jquery-3.3.1.js"></script>
+<script src="__ROOT__/static/layer/layer.js"></script>
 <script>  
        $(document).ready(function(){
         $('.submit').on('click', function(){
