--- a/application/feedback/view/Index/index_emp.html
+++ b/application/feedback/view/Index/index_emp.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>订单管理</title>
 <!-- <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script> -->
-<script src="../../static/js/jquery-3.3.1.js"></script>
-<script src="../../static/layer/layer.js"></script>
+<script src="__ROOT__/static/js/jquery-3.3.1.js"></script>
+<script src="__ROOT__/static/layer/layer.js"></script>
 <script>  
        $(document).ready(function(){
         $('.submit').on('click', function(){
@@ -21,10 +21,18 @@
         });
        });
     </script>
+    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="theme.css" type="text/css">
+    <link rel="stylesheet" href="__CSS__/aftersale.css" type="text/css">   
 </head>
 
 <body>
-<h2>售后订单列表</h2> 
+        <br>
+        <br>
+        <br>
 <table class="table table-striped table-hover">
     <thead>
         <tr>
