--- a/application/afterSale/view/Index/index_emp.html
+++ b/application/afterSale/view/Index/index_emp.html
@@ -47,7 +47,6 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
-            
             <th id="aftersale_id">售后编号</th>
             <th id="order_num">订单编号</th>
             <th id="question_type">问题类型</th>
@@ -60,13 +59,28 @@
     </thead>
 
     {volist name="aftersaleInfo" id="Info" }
-    <tr>
-        <td>{$Info.aftersale_roll}</td>
-        <td>{$Info.order_num}</td>
-        <td>{$Info.question_type}</td>
-        <td>{$Info.processing_date}</td>
-        <td>{$Info.state}</td>
-        <td>{$Info.question}</td>
+        <?php
+        
+        if ($Info['level']=='是' && $Info['state']=='办理中'){
+            echo "<tr style='color:red;'>";
+            echo "<td>".$Info['aftersale_roll']."</td>";
+            echo "<td>".$Info['order_num']."</td>";
+            echo "<td>".$Info['question_type']."</td>";
+            echo "<td>".$Info['processing_date']."</td>";
+            echo "<td>".$Info['state']."</td>";
+            echo "<td>".$Info['question']."</td>";
+        }
+        else{
+            echo "<tr>";
+                    echo "<td>".$Info['aftersale_roll']."</td>";
+                    echo "<td>".$Info['order_num']."</td>";
+                    echo "<td>".$Info['question_type']."</td>";
+                    echo "<td>".$Info['processing_date']."</td>";
+                    echo "<td>".$Info['state']."</td>";
+                    echo "<td>".$Info['question']."</td>";
+        }
+        ?>
+        
         <?php
         if($Info['state']=='办结'){
             echo "<td><button class='submit' id=".$Info['aftersale_roll'].">修改</button></td>".
