--- a/application/feedback/view/Feedback/pannel.html
+++ b/application/feedback/view/Feedback/pannel.html
@@ -45,6 +45,9 @@
                     if(isset($flag)){
                         echo "<p>".$flag."</p>";
                     }
+                    elseif(isset($flag2)){
+                        echo "<p>".$flag2."</p>";
+                    }
                     else{
                         echo "<p>".$feedbackroll."</p>";
                     }
@@ -59,6 +62,9 @@
                     <?php
                     if(isset($flag)){
                         echo "<p>".$flag."</p>";
+                    }
+                    elseif(isset($flag2)){
+                        echo "<p>".$flag2."</p>";
                     }
                     else{
                         echo "<p>".$aftersaleID."</p>";
@@ -153,7 +159,7 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <?php
-                if(isset($flag)){
+                if(isset($flag)||isset($flag2)){
                     echo "<button class='layui-btn' id='confirm' disabled lay-submit lay-filter='formDemo'>立即提交</button>";
                 }
                 else{
