统计分析页

--- a/application/role/view/role/role.html
+++ b/application/role/view/role/role.html
@@ -22,7 +22,7 @@
 <body>
     <div  class="container" style=" height:452px;">
         <div class="row">
-            <div class="offset-md-1 col-md-10"></div>
+            <div class="offset-md-1 col-md-10">
             <br>
             <form action="{:url('Role/role')}" method="post">
                 <table>
